manifests/deployment-canary.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: app-demo-canary
  namespace: ${parameters.namespace}
  labels:
    source: demo
    app: spinnaker
    version: canary
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path:  "/metrics"
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo
      app: spinnaker
      version: canary
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
        version: canary
    spec:
      containers:
      - name: primary
        image: phantomx/spin-demo-sample:v0.0.4-manual
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/healthz
