manifests/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: app-demo
  namespace: ${namespace}
  labels:
    source: demo
    app: spinnaker
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path:  "/metrics"
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: phantomx/spin-demo-sample
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/healthz
