manifests/demo.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: default
  labels:
    source: demo
    stack: frontend
    app: spinnaker
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: phantomx/spin-demo-sample
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000

---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: default
spec:
  selector:
    source: demo
    app: spinnaker
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 32180
