manifests/istio-canary-0.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-demo-virtual-service
  namespace: ${parameters.namespace}
spec:
  hosts:
  - "*"
  gateways:
  - spinnaker-demo-gateway
  http:
  - route:
    - destination:
        host: app-demo
        subset: main
      weight: 100
    - destination:
        host: app-demo
        subset: canary
      weight: 0
    match:
    - uri:
        exact: /page
    - uri:
        exact: /
