manifests/istio-canary-05.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-demo-virtual-service
  namespace: ${parameters.namespace}
spec:
  hosts:
  - "*"
  gateways:
  - spinnaker-demo-gateway
  http:
  - route:
    - destination:
        host: app-demo
        subset: main
      weight: 95
    - destination:
        host: app-demo
        subset: canary
      weight: 5
    match:
    - uri:
        exact: /page
    - uri:
        exact: /
