manifests/istio-config.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spinnaker-demo-gateway
spec:
  selector:
    # Which pods we want to expose as Istio router
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spinnaker-demo
spec:
  host: spinnaker-demo
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: main
    labels:
      version: main
  - name: canary
    labels:
      version: canary
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: spinnaker-demo-canary
#spec:
#  host: spinnaker-demo
#  subsets:
#  - name: canary
#    labels:
#      version: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spinnaker-demo-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - spinnaker-demo-gateway
  http:
  - route:
    - destination:
        host: spinnaker-demo
        subset: main
      weight: 50
    - destination:
        host: spinnaker-demo
        subset: canary
      weight: 50
    match:
    - uri:
        exact: /page
    - uri:
        exact: /
